src/objects/Unit_Sub_Category__c.object
<CustomObject>
    <description>Object used to capture Unit Sub-Category against Units.</description>
    <fields>
        <fullName>Activity__c</fullName>
        <label>Activity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Office</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Integration_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Integration Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Push_LeaseItems_To_DCCA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Push LeaseItems To DCCA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SQL_Integration_Status__c</fullName>
        <label>SQL Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ready To Insert</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Category_Name__c</fullName>
        <label>Unit Category Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Unit_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit Category</label>
        <referenceTo>Unit_Category__c</referenceTo>
        <relationshipLabel>Unit Sub-Categories</relationshipLabel>
        <relationshipName>Unit_Sub_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Yardi_SubCategory_Code__c</fullName>
        <formula>Unit_Category__r.Asset_Class__r.Name &amp;&quot;-&quot; &amp; Unit_Category__r.Name &amp;&quot;-&quot;&amp; Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yardi SubCategory Code</label>
        <type>Text</type>
    </fields>
    <label>Unit Sub-Category</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Unit Sub-Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unit Sub-Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>